# pallet_pickup_demo

./: .gitignore  CMakeLists.txt  README.md  package.xml
cfg/: pallet_pickup_demo.rviz  soter_global_localization.yaml  soter_local_localization.yaml
cfg/apriltag/: tags.yaml
cfg/behavior/: dropoff_tree.xml  follow_waypoints_tree.xml  move_and_pickup_tree.xml  move_tree.xml  parameters.yaml  pickup_and_dropoff_tree.xml  pickup_demo_tree.xml  pickup_tree.xml  round_trip_demo_tree.xml  round_trip_tree.xml  tree.xml
cfg/carlike/: afl_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  recovery_behaviors.yaml  teb_local_planner_params.yaml
cfg/localization/: soter_local_localization.yaml
cfg/mapping/: cartographer_mapping.lua  mapping.rviz
cfg/move_base_flex/: default_planner.yaml  move_base_flex.yaml
cfg/rviz/: pallet_pickup_demo.rviz
launch/: bringup_behavior_tree.launch  bringup_navigation.launch  continuous_detection.launch  mapping.launch  pallet_pickup_demo.launch
maps/: q_lab.pgm  q_lab.yaml  qlab.yaml  qlab_with_garage.pgm  qlab_with_garage.yaml  qlab_with_garage_30min.pgm  qlab_with_garage_30min.yaml  qlab_with_garage_finsih_trajectory.pgm  qlab_with_garage_finsih_trajectory.yaml
